Añadidos comandos a plugins

--- a/etc/plugins.cfg
+++ b/etc/plugins.cfg
@@ -1,2 +1,9 @@
 command[check_load]=/usr/lib/nagios/plugins/check_load -w 5.0,4.0,3.0 -c 10.0,6.0,4.0
-
+command[check_users]=/usr/lib/nagios/plugins/check_users -w 20 -c 50
+command[check_ssh]=/usr/lib/nagios/plugins/check_ssh -H 10.250.7.3
+command[check_procs]=/usr/lib/nagios/plugins/check_procs -w 250 -c 400 -s RSZDT
+command[check_grafana]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 3000
+command[check_influxdb]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 8086
+command[check_prometheus]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 9090
+command[check_mailhog_http]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 8025
+command[check_mailhog_smtp]=/usr/lib/nagios/plugins/check_smtp -H 10.250.7.3 -p 1025
