--- a/etc/plugins.cfg
+++ b/etc/plugins.cfg
@@ -7,3 +7,4 @@ command[check_influxdb]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.
 command[check_prometheus]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 9090
 command[check_mailhog_http]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 8025
 command[check_mailhog_smtp]=/usr/lib/nagios/plugins/check_smtp -H 10.250.7.3 -p 1025
+command[check_disk]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -p /
