Añadido comando de ntp

--- a/etc/plugins.cfg
+++ b/etc/plugins.cfg
@@ -8,3 +8,4 @@ command[check_prometheus]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.25
 command[check_mailhog_http]=/usr/lib/nagios/plugins/check_http -w 5 -c 10 -I 10.250.7.3 -p 8025
 command[check_mailhog_smtp]=/usr/lib/nagios/plugins/check_smtp -H 10.250.7.3 -p 1025
 command[check_disk]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -p /
+command[check_ntp_time]=/usr/lib/nagios/plugins/check_ntp -H 10.250.7.3 -w 0.5 -c 10
